# nextjs-minesweeper-game

./: .env.example  CHANGELOG.md  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/app/api/discord-webhook/: route.ts
src/components/: CustomDock.tsx  GameResultModal.tsx  MainMenu.tsx  Minesweeper.tsx  SettingsModal.tsx  Timer.tsx  TooltipWrapper.tsx  Web3Connect.tsx  mode-toggle.tsx
src/components/magicui/: dock.tsx  particles.tsx  shimmer-button.tsx  sparkles-text.tsx
src/components/mainmenu/: AchievementCard.tsx  QuestCard.tsx
src/components/modal/: AchievementModal.tsx  GameResultModal.tsx  MultiplayerModal.tsx  QuestModal.tsx  SettingsModal.tsx  SingleplayerModal.tsx
src/configs/: game.tsx  index.ts  language.ts  metadata.ts  mock.ts  settings.ts
src/hooks/: useTranslation.ts  useTranslation.tsx
src/lib/: utils.ts
src/locales/: en.json  jp.json  th.json  vi.json  zh.json
src/providers/: FontProvider.tsx  LanguageProvider.tsx  SolanaProvider.tsx  ThemeProvider.tsx  Web3Provider.tsx
src/stores/: commonStore.ts  gameStore.ts  index.ts  languageStore.ts  settingStore.ts  walletStore.ts
src/types/: index.d.ts  store.d.ts
src/utils/: constants.ts  discord-webhook.ts
